--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -9,6 +9,30 @@
     padding-top: 100px;
     padding-bottom: 100px;
     -webkit-overflow-scrolling: touch;
+	background: -moz-linear-gradient(top,  rgba(232,232,232,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(232,232,232,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(232,232,232,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(232,232,232,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(232,232,232,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6e8e8e8', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+}
+.dashbox {
+	height: 287px;
+  border-radius: 30px;
+  margin: 7px;
+  width: 31.9%;
+  background: rgba(209,17,17,0.5);
+  padding: 20px;
+}
+.dashbox h1 {
+	color: #fff;
+	font-size: 205%;
+	text-transform: uppercase;
+}
+.dash-logo {
+	background-color: #000;
 }
 .footer {
     position: fixed;
@@ -90,7 +114,7 @@
 }
 .navbar-fixed-bottom  ul.navbar-nav li {
     display: inline-block;
-    width:25%;
+    width:20%;
 }
 .navbar-inverse ul.navbar-nav>li>a {
     font-size: 10px;
